# FP

./: .gitignore  CMakeLists.txt  Convolution.h  Filter.h  FilterChain.h  FilterTestMain.cpp  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  Kernel.h  Matrix.h  README.md  log.cpp  log.h  main.cpp
scripts/: cleanMinutieaData.sh  convertPGM.sh  convertWSQ.sh  histogram.mat  matchPrints.sh  minutiea.sh  printQuality.sh  runTest.sh  runTimingTest.sh
